--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FILLOUTAPP }}'
-          projectId: filloutapp
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FILLOUTAPP_73194 }}'
+          projectId: filloutapp-73194
