--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "fillout",
   "version": "1.0.0",
   "description": "fillout api test",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js",
+    "deploy": "firebase deploy --only functions:api"
   },
   "author": "raza",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.8.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.10",
